Implement flyTo animation
'Smooth and efficient zooming and panning' from
https://www.win.tue.nl/~vanwijk/zoompan.pdf

--- a/platforms/android/demo/src/main/res/layout/main.xml
+++ b/platforms/android/demo/src/main/res/layout/main.xml
@@ -20,6 +20,13 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/sceneSelector">
 
+        <Button
+            android:id="@+id/flyTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="flyTo"
+            android:text="Fly" />
+
     </com.mapzen.tangram.MapView>
 
 </RelativeLayout>
